# ets-browser

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs  main.rs  output.rs
crates/cli/tests/: cli_tests.rs  ets_integration_tests.rs  output_tests.rs  test_helpers.rs
crates/lib/: Cargo.toml
crates/lib/src/: errors.rs  ets.rs  lib.rs
crates/lib/tests/: cookie_tests.rs  ets_types_tests.rs  filter_tests.rs
crates/web/: Cargo.toml  build.rs
crates/web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/web/frontend/src/: api.ts  main.ts  table-contents.ts  tables-list.ts
crates/web/src/: cli.rs  errors.rs  lib.rs  main.rs  server.rs
crates/web/src/api/: mod.rs  tables.rs
crates/web/tests/: cli_tests.rs  router_tests.rs  test_helpers.rs
scripts/: release-linux.nu  release-macos.nu  release-windows.nu
