[workspace]
members = ["crates/cli", "crates/lib", "crates/web"]
resolver = "3"

[workspace.package]
version = "1.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Michael S. Klishin"]
repository = "https://github.com/michaelklishin/ets-browser"

[workspace.dependencies]
ets-lib = { path = "crates/lib" }

edp_node = "0.12"
erltf = "0.12"
erltf_serde = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4", features = ["help", "color", "cargo", "env"] }
thiserror = "2.0"
sysexits = "0.10"
tabled = { version = "0.20", features = ["ansi"] }
tokio = { version = "1.42", features = ["full"] }
log = "0.4"
fern = "0.7"
hostname = "0.4"
rand = "0.9"
dirs = "6.0"
humansize = "2.1"
regex = "1.11"

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

assert_cmd = "2.0"
predicates = "3.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
