[package]
name = "ets-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "ets_cli"
path = "src/lib.rs"

[[bin]]
name = "ets-cli"
path = "src/main.rs"

[dependencies]
ets-lib.workspace = true

erltf.workspace = true

clap.workspace = true
thiserror.workspace = true
sysexits.workspace = true
tabled.workspace = true
tokio.workspace = true
log.workspace = true
fern.workspace = true
dirs.workspace = true
humansize.workspace = true
regex.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
