[package]
name = "ets-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "ets_web"
path = "src/lib.rs"

[[bin]]
name = "ets-web"
path = "src/main.rs"

[dependencies]
ets-lib.workspace = true

serde.workspace = true
serde_json.workspace = true

clap.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
dirs.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
reqwest.workspace = true
tokio-test.workspace = true
